--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,12 @@
 ---
-
+import Layout from "@/layouts/Layout.astro";
+import Header from "@/components/Header";
+import HangmanGame from "@/components/HangmanGame";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Ahorcado">
+  <main class="min-h-screen md:max-w-7xl pt-15 mx-auto px-4">
+    <Header />
+    <HangmanGame className="mt-8" client:load />
+  </main>
+</Layout>
