--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,19 +1,24 @@
 @import 'tailwindcss';
 
 @theme {
-    --color-bg: #f8f6f2; /* blanco roto */
-    --color-secondary: #2563eb;
-    --color-grid: #93c4fd83; /* azul clarito */
+    --color-bg: #f8f6f2;
+    --color-grid: #93c4fd83;
+    --color-text: #1a237e;
 }
-
-html, body {
+  html,
+  body {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Mouse Memoirs", sans-serif;
+	font-weight: 300;
+	font-display: swap;
     background-color: var(--color-bg);
-    color: var(--color-neutral-400);
-    background-image:
-        linear-gradient(to right, var(--color-grid) 1px, transparent 1px),
-        linear-gradient(to bottom, var(--color-grid) 1px, transparent 1px);
+    color: var(--color-text);
+    background-image: linear-gradient(
+        to right,
+        var(--color-grid) 1px,
+        transparent 1px
+      ),
+      linear-gradient(to bottom, var(--color-grid) 1px, transparent 1px);
     background-size: 32px 32px;
-}
+  }
