--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,24 +1,24 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
-    --color-bg: #f8f6f2;
-    --color-grid: #93c4fd83;
-    --color-text: #1a237e;
+  --color-bg: #f8f6f2;
+  --color-grid: #93c4fd83;
+  --color-text: #1a237e;
+
+  --font-primary: 'Mouse Memoirs', sans-serif;
 }
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "Mouse Memoirs", sans-serif;
-	font-weight: 300;
-	font-display: swap;
-    background-color: var(--color-bg);
-    color: var(--color-text);
-    background-image: linear-gradient(
-        to right,
-        var(--color-grid) 1px,
-        transparent 1px
-      ),
-      linear-gradient(to bottom, var(--color-grid) 1px, transparent 1px);
-    background-size: 32px 32px;
-  }
+html,
+body {
+  @apply m-0 p-0 text-text bg-bg;
+  background-image: linear-gradient(
+      to right,
+      var(--color-grid) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, var(--color-grid) 1px, transparent 1px);
+  background-size: 32px 32px;
+}
+
+*{
+  @apply font-primary lowercase;
+}
