--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
 }
 html,
 body {
-  @apply m-0 p-0 text-text bg-bg;
+  @apply m-0 p-0 text-text bg-bg font-primary;
   background-image: linear-gradient(
       to right,
       var(--color-grid) 1px,
@@ -20,5 +20,9 @@ body {
 }
 
 *{
-  @apply font-primary lowercase cursor-crosshair;
+  @apply cursor-crosshair;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  @apply lowercase;
 }
