--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ export interface Props {
 
 const { title, description } = Astro.props;
 import "@/styles/global.css";
+import Analytics from "@vercel/analytics/astro";
 ---
 
 <!doctype html>
@@ -35,6 +36,7 @@ import "@/styles/global.css";
     />
   </head>
   <body class="font-mono">
+    <Analytics />
     <slot />
   </body>
 </html>
