feat: add sitemap integration and update robots.txt for SEO improvements

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,11 +13,14 @@ import Analytics from "@vercel/analytics/astro";
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content={description} />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>{title}</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content={description} />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="author" content="zkjon" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://hangman.zkjon.dev/" />
+   
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:image" content="https://hangman.zkjon.dev/og.png" />
