--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ import Analytics from "@vercel/analytics/astro";
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="author" content="zkjon" />
     <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
     <link rel="canonical" href="https://hangman.zkjon.dev/" />
    
     <meta property="og:title" content={title} />
